feat: Add "Advanced Settings" tab in the top pane

--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,22 @@
             <optional>false</optional>
         </dependency>
         <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpasyncclient</artifactId>
+            <version>4.1.1</version>
+            <type>jar</type>
+            <scope>compile</scope>
+            <optional>false</optional>
+        </dependency>
+        <dependency>
+            <groupId>org.controlsfx</groupId>
+            <artifactId>controlsfx</artifactId>
+            <version>11.0.3</version>
+            <type>jar</type>
+            <scope>compile</scope>
+            <optional>false</optional>
+        </dependency>
+        <dependency>
             <groupId>org.to2mbn</groupId>
             <artifactId>jmccc-mcdownloader</artifactId>
             <version>2.4</version>
