--- a/pom.xml
+++ b/pom.xml
@@ -17,11 +17,7 @@
             <version>1.9.4</version>
         </dependency>
 
-        <dependency>
-            <groupId>com.MQ</groupId>
-            <artifactId>Launcher</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
+
         <dependency>
             <groupId>com.MQ</groupId>
             <artifactId>UI_JavaFX</artifactId>
@@ -32,7 +28,17 @@
             <artifactId>UI_H5</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>com.MQ</groupId>
+            <artifactId>Launcher</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
+
+    <properties>
+        <maven.compiler.source>15</maven.compiler.source>
+        <maven.compiler.target>15</maven.compiler.target>
+    </properties>
 
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.MQ</groupId>
