--- a/pom.xml
+++ b/pom.xml
@@ -21,23 +21,32 @@
         <dependency>
             <groupId>com.MQ</groupId>
             <artifactId>UI_JavaFX</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>com.MQ</groupId>
+                    <artifactId>UI_JavaFX</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>com.MQ</groupId>
             <artifactId>UI_H5</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>com.MQ</groupId>
+                    <artifactId>UI_H5</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>com.MQ</groupId>
             <artifactId>Launcher</artifactId>
-            <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
 
     <properties>
-        <maven.compiler.source>15</maven.compiler.source>
-        <maven.compiler.target>15</maven.compiler.target>
+        <maven.compiler.source>8</maven.compiler.source>
+        <maven.compiler.target>8</maven.compiler.target>
     </properties>
 
     <modelVersion>4.0.0</modelVersion>
