chore: Rollback the browser's version

--- a/UI_H5/pom.xml
+++ b/UI_H5/pom.xml
@@ -12,16 +12,16 @@
         <dependency>
             <groupId>com.teamdev</groupId>
             <artifactId>jxbrowser</artifactId>
-            <version>7.12.2</version>
+            <version>6.21</version>
             <scope>system</scope>
-            <systemPath>${project.basedir}/lib/jxbrowser-7.12.2.jar</systemPath>
+            <systemPath>${project.basedir}/lib/jxbrowser-6.21.jar</systemPath>
         </dependency>
         <dependency>
             <groupId>com.teamdev</groupId>
             <artifactId>jxbrowser</artifactId>
-            <version>win64-7.12.2</version>
+            <version>win64-6.21</version>
             <scope>system</scope>
-            <systemPath>${project.basedir}/lib/jxbrowser-win64-7.12.2.jar</systemPath>
+            <systemPath>${project.basedir}/lib/jxbrowser-win64-6.21.jar</systemPath>
         </dependency>
     </dependencies>
 
@@ -40,6 +40,7 @@
                         <manifest>
                             <addClasspath>true</addClasspath>
                             <mainClass>UI.H5.launcherUI</mainClass> <!-- 你的主类名 -->
+                            <addMavenDescriptor>false</addMavenDescriptor>
                         </manifest>
                     </archive>
                 </configuration>
