feat: Remove the orig. JavaFX files, and add a new JavaFX module using new JRE and the new designer Known BUGs: When right click one item of VersionList, it will show 2 context menu.

--- a/Launcher/pom.xml
+++ b/Launcher/pom.xml
@@ -44,6 +44,11 @@
             <version>1.9.4</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-controls</artifactId>
+            <version>11</version>
+        </dependency>
     </dependencies>
 
     <properties>
