--- a/UI_JavaFX/pom.xml
+++ b/UI_JavaFX/pom.xml
@@ -26,10 +26,6 @@
       <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>net.java.dev.jna</groupId>
-      <artifactId>jna-platform</artifactId>
-    </dependency>
-    <dependency>
       <groupId>org.openjfx</groupId>
       <artifactId>javafx-controls</artifactId>
       <version>16</version>
@@ -42,6 +38,12 @@
     <dependency>
       <groupId>com.Sparrow</groupId>
       <artifactId>Launcher</artifactId>
+      <version>1.0.0-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+      <groupId>org.controlsfx</groupId>
+      <artifactId>controlsfx</artifactId>
+      <version>11.1.0</version>
     </dependency>
   </dependencies>
 
