--- a/UI_JavaFX/pom.xml
+++ b/UI_JavaFX/pom.xml
@@ -45,6 +45,21 @@
       <artifactId>controlsfx</artifactId>
       <version>11.1.0</version>
     </dependency>
+    <dependency>
+      <groupId>commons-io</groupId>
+      <artifactId>commons-io</artifactId>
+      <version>2.6</version>
+    </dependency>
+    <dependency>
+      <groupId>com.alibaba</groupId>
+      <artifactId>fastjson</artifactId>
+      <version>1.2.76</version>
+    </dependency>
+    <dependency>
+      <groupId>com.jfoenix</groupId>
+      <artifactId>jfoenix</artifactId>
+      <version>9.0.1</version>
+    </dependency>
   </dependencies>
 
   <build>
