--- a/UI_JavaFX/pom.xml
+++ b/UI_JavaFX/pom.xml
@@ -36,6 +36,11 @@
       <version>16</version>
     </dependency>
     <dependency>
+      <groupId>org.openjfx</groupId>
+      <artifactId>javafx-base</artifactId>
+      <version>16</version>
+    </dependency>
+    <dependency>
       <groupId>com.Sparrow</groupId>
       <artifactId>Launcher</artifactId>
       <version>1.0.0-SNAPSHOT</version>
