--- a/UI_JavaFX/pom.xml
+++ b/UI_JavaFX/pom.xml
@@ -55,6 +55,11 @@
       <artifactId>jfoenix</artifactId>
       <version>8.0.10</version>
     </dependency>
+    <dependency>
+      <groupId>log4j</groupId>
+      <artifactId>log4j</artifactId>
+      <version>1.2.17</version>
+    </dependency>
   </dependencies>
 
   <build>
