--- a/UI_JavaFX/src/main/resources/com/Sparrow/UI/JavaFX/log4j.properties
+++ b/UI_JavaFX/src/main/resources/com/Sparrow/UI/JavaFX/log4j.properties
@@ -1,3 +1,11 @@
+#
+# Copyright (c) 2021 Sparrow All Rights Reserved.
+# FileName: log4j.properties
+# @author: 1662423349@qq.com
+# @date: 2021/6/12 下午9:17
+# @version: 1.0
+#
+
 ### 设置###
 log4j.rootLogger = debug,stdout,D,E
 ### 输出信息到控制抬 ###
